@@ -2724,3 +2724,7 @@ can handle different output formats and hyperspectral pictures.
 Only runs on a single machine, however -- now NFS locking on
 shared volumes.  Mainly a demonstration tool for RpictSimulManager
 C++ class, but may have its uses.
+
+Fixed a bug in BSDF sampling of sources pointed out by
+David Geisler-Moroder, which tended to overestimate specular
+contributions for some BSDFs.
